maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:3: error: Missing closing brace `}' assumed here
override def run() {var state=0;
^IslandMaze:3: error: expected start of definition
override def run() {var state=0;
         ^